add a foot for the web app, with contact us info

--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
     </header>
 <div class="sidebar">
     <a class="active" href="#Ratings">Ratings</a>
-</div>    
+</div>  <footer>
+    <img src="./images/whatsapp.png">
+    <img src="./images/facebook.png">
+    <img src="./images/instagram.jpg">
+    <img src="./images/twitter.png">
+    <ul>  
+    <li><a href="WhatsApp.html"></a>WhatsApp</li>
+    <li><a href="Facebook.html"></a>Facebook</li>
+    <li><a href="Instagram.html"></a>Instagram</li>
+    <li><a href="Twitter.html"></a>Twitter</li>
+    </ul>
+
+</footer>
+
+
+
 </body>
 </html>
