change in ratings and background

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
         
         <div class="sidebar">
             <a class="active" href="#Ratings">Ratings</a>
+            <div class="stars">
+                <p>
+                Our app is rated 4 stars which means it is very dependable and has been able to help many people across the globe to find their missing loved ones
+            </p>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9734;</span>
+            </div>
         </div>
         <div class="container2">
             <div class="animalDiv">
