--- a/index.html
+++ b/index.html
@@ -16,29 +16,24 @@
                 <ul>
                     <li class="current"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    
+                    <li><a href="Sign out.html">Sign Out</a></li>
                 </ul>
            </nav>
         </div>   
     </header>
 
-    <div class="mid-section">
-        
-        <div class="sidebar">
-            <a class="active" href="#Ratings">Ratings</a>
-            <div class="stars">
-                <p>
-                Our app is rated 4 stars which means it is very dependable and has been able to help many people across the globe to find their missing loved ones
-            </p>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9733;</span>
-                <span class="star">&#9734;</span>
-
-
+    <div class="dropdown">
+            <button class="dropbtn">Menu</button>
+        <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <div class="dropdown-submenu-content">
+                <a href="#">Submenu Link 1</a>
+                <a href="#">Submenu Link 1</a>
             </div>
+          </div>
         </div>
+    </div>    
         <div class="container2">
             <div class="movieDiv">
                 <input type="text" placeholder="Enter movie Name" required  id="movieNameInput">
@@ -49,10 +44,19 @@
         </div>
         <div class="popup" id="popup"></div>
     </div>
-
+<footer>
+    <div class="box">
+    <p>
+        Our app is rated 4 stars which means it is very dependable and has been able to help many people across the globe to find their missing loved ones
+    </p>
+        <span class="star">&#9733;</span>
+        <span class="star">&#9733;</span>
+        <span class="star">&#9733;</span>
+        <span class="star">&#9733;</span>
+        <span class="star">&#9734;</span>
+    </div>    
+</footer>
 <script src="./script.js"></script>
 
 </body>
-
-
 </html>
