--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="dropdown">
             <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
+            <a href="#">WishList</a>
+            <a href="#">Recommendation</a>
             <div class="dropdown-submenu-content">
                 <a href="#">Submenu Link 1</a>
                 <a href="#">Submenu Link 1</a>
