--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <footer>
     <div class="box">
     <p>
-        Our app is rated 4 stars which means it is very dependable and has been able to help many people across the globe to find their missing loved ones
+        In a world where loved ones vanish without a trace, our app emerges as a beacon of hope. With its stellar reputation and a solid 4-star rating, it stands as a testament to its unwavering dependability. Across the globe, it has touched countless lives, bringing solace to those plagued by the anguish of separation. Join us on an emotional journey as we witness the remarkable power of technology, bridging the gap between hearts and reuniting families. Discover the heartwarming stories of those who found their missing loved ones, and experience the extraordinary impact of our app that transcends borders and defies the odds. Get ready for a gripping tale of love, loss, and the triumph of humanity, as our app changes lives and writes its own unforgettable chapter in the annals of hope.
     </p>
         <span class="star">&#9733;</span>
         <span class="star">&#9733;</span>
