--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           </div>
            <nav>
                 <ul>
-                    <li class="current"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li id="home" class="current"><a href="index.html">Home</a></li>
+                    <li id="about"><a href="about.html">About</a></li>
                     <li><a href="Sign out.html">Sign Out</a></li>
                 </ul>
            </nav>
