--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         </div>
     </div>
     <div id="searchResultContainer"></div>
+
+    <div class="section">
+        <h2>Trending</h2>
+    </div>
    
     <footer>
         <div class="box">
