Add simple slide show on landing page

--- a/index.html
+++ b/index.html
@@ -32,24 +32,11 @@
         </div>
     </div>
     <div id="searchResultContainer"></div>
-    <section>
-    <div class="heropage">
-        <h2>Trending</h2>
-        <div class="inside-heropage">
-            <span>NOW STREAMING</span>
-            <div class="line-1"></div>
-            <h1>Avengers:Endgame</h1>
-            <p>Action,Drama,Sci-fi| 2021 | SOUTH AFRICA | 150 min</p>
-            <div class="btn1">
-                <a href=""><i class="fas fa-play"></i>Watch Now</a>
-                <a href=""><i class="fas fa-play"></i>Watch Later</a>
-            </div>
-        </div>
+    <div id="imageshow">
+
+
     </div>
-    <div class="poster">
-        <img src="images/avengers_endgame.jpg" alt="">
-    </div>
-    </section>
+    
     <!-- <footer>
         <div class="box">
         <p>
