--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Moviefinder</title>
 </head>
 <body>
@@ -32,23 +33,36 @@
         </div>
     </div>
     <div id="searchResultContainer"></div>
-    <div id="imageshow">
-
-
-    </div>
+    <div id="imageshow"></div>
     
-    <!-- <footer>
-        <div class="box">
-        <p>
-            In a world where loved ones vanish without a trace, our app emerges as a beacon of hope. With its stellar reputation and a solid 4-star rating, it stands as a testament to its unwavering dependability. Join us on an emotional journey as we witness the remarkable power of technology, bridging the gap between hearts and reuniting families. Discover the heartwarming stories of those who found their missing loved ones, and experience the extraordinary impact of our app that transcends borders and defies the odds. Get ready for a gripping tale of love, loss, and the triumph of humanity, as our app changes lives and writes its own unforgettable chapter in the annals of hope.
-        </p>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9734;</span>
-        </div>    
-    </footer> -->
+    <footer class="footer">
+        <div class="container3">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="#">Privacy policy</a></li>
+                        <li><a href="#">Our services</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Get help</h4>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow us</h4>
+                    <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 <script src="./script.js"></script>
 
 </body>
