--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="dropdown">
             <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
-            <a href="#">WishList</a>
-            <a href="#">Recommendation</a>
+            <a href="wishlist.html">WishList</a>
+            <a href="recommend.html">Recommendation</a>
         </div>
     </div>
     <div id="searchResultContainer"></div>
@@ -49,7 +49,7 @@
             <span class="star">&#9734;</span>
         </div>    
     </footer> -->
-<script src="./script.js"></script>
+<script src="./index.js"></script>
 
 </body>
 </html>
