--- a/recommend.html
+++ b/recommend.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Recommendation</h1>
-    <div class="recommndationContainer">
+    <div id="recommndationContainer">
 
     </div>
 
-    <script src="./index.js"></script>    
+    <script src="./script.js"></script>    
 </body>
 </html>
