--- a/wishlist.html
+++ b/wishlist.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>WishList</h1>
-    <div class="wishlistContainer">
+    <div id="wishlistContainer">
     </div>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
