restructured the layout

--- a/index.html
+++ b/index.html
@@ -19,20 +19,19 @@
            <nav>
                 <ul>
                     <li id="_home" class="current"><a href="index.html">Home</a></li>
+                    <li><a href="wishlist.html">WishList</a></li>
+                    <li><a href="recommend.html">Recommendation</a></li>
                     <li><a href="Sign out.html">Sign Out</a></li>
                 </ul>
            </nav>
         </div>   
     </header>
 
-    <div class="dropdown">
-            <button class="dropbtn">Menu</button>
-        <div class="dropdown-content">
-            <a href="wishlist.html">WishList</a>
-            <a href="recommend.html">Recommendation</a>
-        </div>
-    </div>
+    
     <div id="searchResultContainer"></div>
+    <div id="recommndationContainer"></div>
+    <div id="wishlistContainer"></div>
+
     <div id="imageshow"></div>
     
     <footer class="footer">
