--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <div id="searchResultContainer"></div>
     <div id="recommndationContainer"></div>
-    <div id="wishlistContainer" style="display:none;"></div>
+    <div id="wishlistContainer"></div>
 
 
     <div id="imageshow"></div>
