Added Logic for displaying items

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     
     <div id="searchResultContainer"></div>
     <div id="recommndationContainer"></div>
-    <div id="wishlistContainer"></div>
+    <div id="wishlistContainer">
+       
+    </div>
 
 
     <div id="imageshow"></div>
