add recomend onclick on the html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li id="_home" class="current"><a href="index.html">Home</a></li>
                     <li><a href="#" onclick="fetchWishlist()">WishList</a></li>
-                    <li><a href="#recommendationContainer">Recommendation</a></li>
+                    <li><a href="#" onclick="recommendMovies()"">Recommendation</a></li>
                     <li><a href="Sign out.html">Sign Out</a></li>
                 </ul>
            </nav>
