fixed all functionality

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     
     <div id="searchResultContainer"></div>
-    <div id="recommndationContainer"></div>
+    <div id="recommendationContainer"></div>
     <div id="wishlistContainer">
        
     </div>
