remove unnecessary comments+-------

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
 
-    <div id="imageshow"></div>
+    <!-- <div id="imageshow"></div> -->
     
     <footer class="footer">
         <div class="container3">
