fixed the  the code and removed  slideshow

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     
     <div id="searchResultContainer"></div>
     <div id="recommendationContainer"></div>
+        <h2>We you might also like these...</h2>
     <div id="wishlistContainer">
-       
+        <h2>You favourites</h2>
     </div>
 
 
