--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="footer-col">
                     <h4>Company</h4>
                     <ul>
-                        <li><a href="#">Privacy policy</a></li>
+                        <li><a href="./about.html">Developers</a></li>
                         <li><a href="#">Our services</a></li>
                     </ul>
                 </div>
