--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <input type="text" placeholder="Enter movie Name" required  id="movieNameInput" onkeyup="searchMovie()">
            <nav>
                 <ul>
-                    <li id="_home" class="current"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#" onclick="fetchWishlist()">WishList</a></li>
                     <li><a href="#" onclick="recommendMovies()">Recommendation</a></li>
                 </ul>
