--- a/about.html
+++ b/about.html
@@ -24,12 +24,12 @@
     <div class="developer">
         
         <h2>Dini Jonas</h2>
-        <p>Email: john.doe@gmail.com</p>
+        <p>Email: jonas.dinilethu@gmail.com</p>
         <p class="quote">"Technology is best when it brings people together." - Matt Mullenweg</p>
         <!-- Buttons for GitHub and LinkedIn -->
         <div class="btn-container">
-          <a href="https://github.com/johndoe" class="btn" target="_blank">GitHub</a>
-          <a href="https://www.linkedin.com/in/johndoe" class="btn" target="_blank">LinkedIn</a>
+          <a href="https://github.com/DiniJNS" class="btn" target="_blank">GitHub</a>
+          <a href="https://www.linkedin.com/in/Dini Jonas" class="btn" target="_blank">LinkedIn</a>
         </div>
       </div>
       <div class="developer">
@@ -45,13 +45,13 @@
       </div>
       <div class="developer">
         
-        <h2>Lwando</h2>
-        <p>Email: john.doe@example.com</p>
+        <h2>Lwando Buqindlela</h2>
+        <p>Email: lwando92@gmail.com</p>
         <p class="quote">"Technology is best when it brings people together." - Matt Mullenweg</p>
         <!-- Buttons for GitHub and LinkedIn -->
         <div class="btn-container">
           <a href="https://github.com/johndoe" class="btn" target="_blank">GitHub</a>
-          <a href="https://www.linkedin.com/in/johndoe" class="btn" target="_blank">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/lwando" class="btn" target="_blank">LinkedIn</a>
         </div>
       </div>
       <div class="developer">
