added the loader to recommendations

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
       </div>
       <div class="developer">
         
-        <h2>Abongile</h2>
+        <h2>Abongile Nyakatya</h2>
         <p>Email: abongiletheo00@gmail.com</p>
         <p class="quote">"Code is poetry written by machines." - David Parlett</p>
         <!-- Buttons for GitHub and LinkedIn -->
