--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 
     
     <div id="searchResultContainer"></div>
-    <div id="recommendationContainer"></div>
+    <div id="recommendationContainer">
+        <h4>This is what we think you might like</h4>
+        <div class="loader"></div>
+
+    </div>
     <div id="wishlistContainer">
     </div>
 
