--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
       </div>
       <div class="developer">
         
-        <h2>Anele</h2>
-        <p>Email: john.doe@example.com</p>
+        <h2>Anele Nontshokweni</h2>
+        <p>Email: anotshokweni97@gmail.com</p>
         <p class="quote">"The symphony of code orchestrates the dance of machines." - Sundar Pichai
 
         </p>
